--- a/Numeriguide_v.0.1/Base.lproj/Main_iPhone.storyboard
+++ b/Numeriguide_v.0.1/Base.lproj/Main_iPhone.storyboard
@@ -38,9 +38,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LxI-RR-wkn">
-                                <rect key="frame" x="97" y="269" width="122" height="30"/>
+                                <rect key="frame" x="97" y="269" width="111" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="WELCOME Pierre">
+                                <state key="normal" title="WELCOME Jojo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
